[project]
name = "render_utils"
version = "0.0.2"
description = "Render NetHack glyphs as a screen"
authors = [
  { name = "Eric Hambro", email = "ehambro@fb.com" }
]
readme = "README.md"
requires-python = ">=3.8"

[build-system]
requires = [
  "scikit-build-core>=0.12",
  "pybind11>=2.11",
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
minimum-version = "build-system.requires"
cmake.version = ">=3.15"
build-dir = "build/{wheel_tag}"